# generic_network_framework

./: .gitignore  CMakeLists.txt  README.md  client.cpp  common.hpp  conanfile.txt  server.cpp
example/: CMakeLists.txt  chat_client.cpp  chat_common.hpp  chat_server.cpp
include/gnf/: channel.hpp  client.hpp  common.hpp  connector.hpp  message.hpp  server.hpp  uds.hpp
network/: channel.hpp  client.hpp  connector.hpp  server.hpp
src/: CMakeLists.txt
